plugins {
	id 'java-library'
	id 'groovy'
	id 'idea'
	id 'eclipse'
	id 'maven-publish'
	id 'com.diffplug.spotless' version '6.19.0'
	id 'me.modmuss50.mod-publish-plugin' version '0.7.4'
}

def ENV = System.getenv()

version = mod_version + (ENV.GITHUB_ACTIONS ? '' : '+local')
group = 'TechReborn'

base {
	archivesName = 'techreborn'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

subprojects {
	apply plugin: 'com.diffplug.spotless'

	spotless {
		java {
			licenseHeaderFile(project.name == 'RebornCore' ? project.file('HEADER') : rootProject.file('HEADER'))
			removeUnusedImports()
			indentWithTabs()
			trimTrailingWhitespace()
			endWithNewline()
		}
	}
}

spotless {
	groovy {
		licenseHeaderFile(rootProject.file('HEADER'))
		indentWithTabs()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

sourceSets {
	datagen {
		compileClasspath += sourceSets.main.compileClasspath + sourceSets.main.output
		runtimeClasspath += sourceSets.main.runtimeClasspath + sourceSets.main.output
		// Legacy Fabric/Yarn-era Groovy under src/datagen/groovy (wrong MojMap packages + Fabric DataGen APIs).
		// Exclude from compilation until ported to NeoForge; keeps datagenClasses usable for empty/Java-only additions.
		groovy.srcDirs = []
	}

	gametest {
		compileClasspath += sourceSets.main.compileClasspath + sourceSets.main.output
		runtimeClasspath += sourceSets.main.runtimeClasspath + sourceSets.main.output
		groovy.srcDirs = []
	}

	main {
		java.srcDirs += ['src/client/java']
		java.exclude('**/compat/pal/PalQuantumSuitFlightHandler.java')
		java.exclude('**/compat/rei/**')
		resources.srcDirs += ['src/main/resources', 'src/client/resources', 'src/main/generated']
	}
}

tasks.named('processResources', ProcessResources).configure {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	def replaceProperties = [
		minecraft_version          : minecraft_version,
		minecraft_version_range    : minecraft_version_range,
		neo_version                : neo_version,
		loader_version_range       : loader_version_range,
		mod_id                     : 'techreborn-neoforge',
		mod_name                   : 'Tech Reborn for NeoForge',
		mod_license                : mod_license,
		mod_version                : project.version,
	]
	inputs.properties replaceProperties
	filesMatching('META-INF/neoforge.mods.toml') {
		expand replaceProperties
	}
}

def embeddedRebornJarFileName = 'reborncore.jar'
def jarJarMetadataFile = layout.buildDirectory.file('generated/jarjar/metadata.json')

tasks.register('generateJarJarMetadata') {
	inputs.property('rebornCoreVersion', provider { project(':RebornCore').version.toString() })
	inputs.property('modVersionRange', provider { "[${mod_version},)" })
	outputs.file(jarJarMetadataFile)
	doLast {
		def out = jarJarMetadataFile.get().asFile
		out.parentFile.mkdirs()
		def v = project(':RebornCore').version.toString()
		def range = "[${mod_version},)"
		out.text = """{
\t"jars": [
\t\t{
\t\t\t"identifier": {
\t\t\t\t"group": "RebornCore",
\t\t\t\t"artifact": "reborncore"
\t\t\t},
\t\t\t"version": {
\t\t\t\t"range": "${range}",
\t\t\t\t"artifactVersion": "${v}"
\t\t\t},
\t\t\t"path": "META-INF/jarjar/${embeddedRebornJarFileName}",
\t\t\t"isObfuscated": false
\t\t}
\t]
}
"""
	}
}

tasks.named('jar', Jar).configure {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	manifest {
		attributes([
			'Specification-Title'      : 'techreborn',
			'Specification-Vendor'     : 'TechReborn',
			'Specification-Version'    : '1',
			'Implementation-Title'       : project.name,
			'Implementation-Version'     : project.version,
			'Implementation-Vendor'      : 'TechReborn',
		])
	}
}

repositories {
	mavenCentral()
	maven {
		name = 'NeoForged'
		url = 'https://maven.neoforged.net/releases'
	}
	maven {
		name = 'Modrinth'
		url = 'https://api.modrinth.com/maven'
		content {
			includeGroup 'maven.modrinth'
		}
	}
	maven {
		name = 'FabricMC'
		url = 'https://maven.fabricmc.net/'
	}
	maven {
		name = 'REI'
		url = 'https://maven.shedaniel.me/'
		content {
			includeGroup 'me.shedaniel'
			includeGroup 'me.shedaniel.cloth'
			includeGroup 'dev.architectury'
		}
	}
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
		content {
			includeGroup 'io.github.ladysnake'
		}
	}
	maven {
		name = 'IzzelAliz'
		url = 'https://maven.izzel.io/releases'
	}
	maven {
		name = 'BlameJared'
		url = 'https://maven.blamejared.com'
		content {
			includeGroup 'mezz.jei'
		}
	}
}

dependencies {
	api project(':RebornCore')

	compileOnly("me.shedaniel:RoughlyEnoughItems-neoforge:${rei_version}") {
		transitive = true
	}
	compileOnly("me.shedaniel:RoughlyEnoughItems-api-neoforge:${rei_version}") {
		transitive = true
	}
	compileOnly("me.shedaniel:RoughlyEnoughItems-default-plugin-neoforge:${rei_version}") {
		transitive = true
	}
	compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")

	gametestImplementation 'org.apache.groovy:groovy:4.0.21'
	datagenImplementation 'org.apache.groovy:groovy:4.0.21'

	gametestImplementation('com.google.truth:truth:1.1.3') {
		exclude module: 'guava'
		exclude module: 'asm'
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release = 25
}

// Single NeoGradle pipeline in :RebornCore; reuse its compile deps for the root mod (no second userdev).
// Resolve RebornCore's compileClasspath inside task configuration (lazy), not at script root — NeoGradle registers it after plugins apply.
tasks.named('compileJava', JavaCompile).configure {
	classpath += project(':RebornCore').configurations.named('compileClasspath').get()
}

tasks.named('compileDatagenJava', JavaCompile).configure {
	classpath += project(':RebornCore').configurations.named('compileClasspath').get()
}

tasks.named('compileGametestJava', JavaCompile).configure {
	classpath += project(':RebornCore').configurations.named('compileClasspath').get()
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

tasks.named('sourcesJar', Jar).configure {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('printMigrationTargets') {
	group = 'help'
	description = 'Print NeoForge / Arclight target versions'
	doLast {
		println "NeoForge neo_version: ${neo_version}"
		println "NeoForge neoforge_version (prop): ${neoforge_version}"
		println "Arclight: ${arclight_version}"
	}
}

tasks.register('prepareNeoForgeSmokeMods', Copy) {
	group = 'verification'
	description = 'Copy TechReborn jar (embeds RebornCore via Jar-in-Jar) to build/smoke-neoforge/mods for server staging'
	dependsOn tasks.jar
	into layout.buildDirectory.dir('smoke-neoforge/mods')
	from(tasks.jar)
	duplicatesStrategy = DuplicatesStrategy.FAIL
}

publishMods {
	changelog = providers.environmentVariable('CHANGELOG').orElse('No changelog provided')
	version = project.version
	type = providers.environmentVariable('RELEASE_CHANNEL').orElse('release').map { it == 'release' ? STABLE : BETA }
	modLoaders.add('neoforge')
	dryRun = providers.environmentVariable('CURSEFORGE_API_KEY').getOrNull() == null

	def options = curseforgeOptions {
		accessToken = providers.environmentVariable('CURSEFORGE_API_KEY')
		minecraftVersions.add('1.21')
		minecraftVersions.add('1.21.1')

		requires {
			slug = 'neoforge'
		}
	}

	curseforge('curseforgeTechReborn') {
		from options
		projectId = '233564'
		file = tasks.jar.archiveFile

		embeds {
			slug = 'reborncore'
		}
		optional {
			slug = 'roughly-enough-items'
		}
	}
}

publishing {
	publications {
		register('maven', MavenPublication) {
			groupId = 'techreborn'
			artifactId = project.base.archivesName.get() + '-' + (ENV.GITHUB_REF_NAME ?: 'local')
			version = project.version
			from components.java
		}
	}
	repositories {
		if (ENV.MAVEN_URL) {
			maven {
				url ENV.MAVEN_URL
				credentials {
					username ENV.MAVEN_USERNAME
					password ENV.MAVEN_PASSWORD
				}
			}
		}
	}
}

idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}

// NeoGradle wires Java configs during :RebornCore evaluation; register the hook before forcing evaluation below.
project(':RebornCore').afterEvaluate {
	def rc = project(':RebornCore')
	def mainSourceSet = rc.sourceSets.main
	def rcCompile = rc.configurations.named(mainSourceSet.compileClasspathConfigurationName).get()
	def rcRuntime = rc.configurations.named(mainSourceSet.runtimeClasspathConfigurationName).get()
	if (rootProject.plugins.hasPlugin('idea')) {
		rootProject.idea.module.scopes.COMPILE.plus += [rcCompile]
		rootProject.idea.module.scopes.RUNTIME.plus += [rcRuntime]
	}
	if (rootProject.plugins.hasPlugin('eclipse')) {
		rootProject.eclipse.classpath.plusConfigurations += [rcCompile]
	}

	rootProject.tasks.named('jar', Jar).configure {
		dependsOn(rootProject.tasks.named('generateJarJarMetadata'), rc.tasks.named('jar'))
		from(jarJarMetadataFile) {
			into 'META-INF/jarjar'
		}
		from(rc.tasks.named('jar', Jar).flatMap { it.archiveFile }) {
			into 'META-INF/jarjar'
			rename { _name -> embeddedRebornJarFileName }
		}
	}
}

evaluationDependsOn(':RebornCore')

tasks.named('assemble').configure {
	dependsOn prepareNeoForgeSmokeMods
}
